Move local chr logic to Gradle